add: setting up site search.
Signed-off-by: Eglinux <mthreads0755@gmail.com>

--- a/.github/workflows/document.yml
+++ b/.github/workflows/document.yml
@@ -19,8 +19,9 @@ jobs:
         with:
           key: ${{ github.ref }}
           path: .cache
-      - run: sudo apt install pngquant 
+      - run: sudo apt install pngquant
       - run: pip install git+https://${MKDOCS}@github.com/squidfunk/mkdocs-material-insiders.git
+      - run: pip install jieba # adds search support for the Chinese language
       - run: mkdocs gh-deploy
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }} 
